feat: create new playlist skeleton
