# internal/api/openapi/openapi_gin.gen.go
@@ -19,6 +19,9 @@ type ServerInterface interface {
 	// get playlist
 	// (GET /playlist/{id})
 	GetPlaylist(c *gin.Context, id int)
+	// create playlist
+	// (POST /playlist/{id})
+	CreatePlaylist(c *gin.Context, id int)
 }
 
 // ServerInterfaceWrapper converts contexts to parameters.
@@ -61,6 +64,27 @@ func (siw *ServerInterfaceWrapper) GetPlaylist(c *gin.Context) {
 	siw.Handler.GetPlaylist(c, id)
 }
 
+// CreatePlaylist operation middleware
+func (siw *ServerInterfaceWrapper) CreatePlaylist(c *gin.Context) {
+
+	var err error
+
+	// ------------- Path parameter "id" -------------
+	var id int
+
+	err = runtime.BindStyledParameter("simple", false, "id", c.Param("id"), &id)
+	if err != nil {
+		siw.ErrorHandler(c, fmt.Errorf("Invalid format for parameter id: %s", err), http.StatusBadRequest)
+		return
+	}
+
+	for _, middleware := range siw.HandlerMiddlewares {
+		middleware(c)
+	}
+
+	siw.Handler.CreatePlaylist(c, id)
+}
+
 // GinServerOptions provides options for the Gin server.
 type GinServerOptions struct {
 	BaseURL      string
@@ -93,6 +117,8 @@ func RegisterHandlersWithOptions(router *gin.Engine, si ServerInterface, options
 	router.GET(options.BaseURL+"/genres", wrapper.GetGenres)
 
 	router.GET(options.BaseURL+"/playlist/:id", wrapper.GetPlaylist)
+
+	router.POST(options.BaseURL+"/playlist/:id", wrapper.CreatePlaylist)
 
 	return router
 }
